force-app-metadata-removed/main/default/objects/Charge__c/fields/Fee_For_Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fee_For_Service_Cost__c</fullName>
    <label>Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>