force-app-metadata-removed/main/default/objects/Charge__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <description>Is True when the charge is currently active</description>
    <formula>AND(
TODAY() &gt;= Start_Date__c,
TODAY() &lt;= End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is ticked when the charge is currently active</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>