force-app-metadata-removed/main/default/objects/Charge__c/fields/Number_of_Sessions_Per_Employee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions_Per_Employee__c</fullName>
    <inlineHelpText>Leave blank if this value should be unlimited</inlineHelpText>
    <label>Number of Sessions Per Employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>