force-app-metadata-removed/main/default/objects/Charge__c/fields/Open_Charge__c.field-meta.xml
<CustomField>
    <fullName>Open_Charge__c</fullName>
    <formula>End_Date__c &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Charge?</label>
    <type>Checkbox</type>
</CustomField>