force-app-metadata-removed/main/default/objects/Charge__c/fields/SYS_Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>SYS_Account_Owner_ID__c</fullName>
    <description>The owner ID of the associated account</description>
    <formula>Account__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner ID</label>
    <type>Text</type>
</CustomField>