force-app-metadata-removed/main/default/objects/Charge__c/validationRules/Account_on_charge_year_must_be_the_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_on_charge_year_must_be_the_same</fullName>
    <active>true</active>
    <errorConditionFormula>Charge_Year__r.Account__c != Account__c</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>The account on the charge period does not match the account on this charge</errorMessage>
</ValidationRule>